Fix overflowing text on about page on small screens by scrolling on overflow

--- a/css/about.css
+++ b/css/about.css
@@ -16,6 +16,7 @@ html, body {
     border-top: 3px solid #333;
     border-bottom: 3px solid #333;
     margin: 0 auto;
+    overflow: scroll;
     width: 100%;
     height: 100%;
 }
